# kindle-edm

./: .gitmodules  README.md
application/: CMakeLists.txt  data.cpp  data.h  graphics.cpp  graphics.h  main.cpp
plugin/: CMakeLists.txt  main.cpp
